# tsrs

./: .gitignore  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain  rust-toolchain.toml
crates/binding_node/: CHANGELOG.md  Cargo.toml  index.d.ts  index.js  package.json  tsconfig.json  vitest.config.mts
crates/binding_node/npm/darwin-arm64/: CHANGELOG.md  README.md  package.json
crates/binding_node/npm/darwin-x64/: CHANGELOG.md  README.md  package.json
crates/binding_node/npm/linux-arm64-gnu/: CHANGELOG.md  README.md  package.json
crates/binding_node/npm/linux-arm64-musl/: CHANGELOG.md  README.md  package.json
crates/binding_node/npm/linux-x64-gnu/: CHANGELOG.md  README.md  package.json
crates/binding_node/npm/linux-x64-musl/: CHANGELOG.md  README.md  package.json
crates/binding_node/npm/win32-arm64-msvc/: CHANGELOG.md  README.md  package.json
crates/binding_node/npm/win32-x64-msvc/: CHANGELOG.md  README.md  package.json
crates/binding_node/scripts/: test.js  test_barrel.js
crates/binding_node/src/: lib.rs
crates/binding_node/tests/: index.spec.ts  transform.spec.ts
crates/tswc/: Cargo.toml
crates/tswc/src/: lib.rs  main.rs
crates/tswc/src/apis/: mod.rs  transform.rs
crates/tswc/src/compiler/: assets.rs  compiler.rs  mod.rs  module_graph.rs  optimize.rs  transform.rs
crates/tswc/src/config/: config.rs
crates/tswc/src/plugins/: barrel_visitor.rs  demo.rs  export_import_visitor.rs  mod.rs  named_import_transform_visitor.rs  named_transform_visitor.rs
crates/tswc/src/resolver/: mod.rs  resolve.rs
crates/tswc/src/utils/: decl.rs  (+4 more)
(+48 files in other folders)
