[package]
edition = "2021"
name = "binding_node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { "workspace" = true }
napi-derive = { "workspace" = true }
tswc = { path = "../tswc" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
