[package]
name = "tswc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_core = { version = "0.96.9", features = [
  "base",
  "common",
  "ecma_ast",
  "ecma_transforms",
  "ecma_parser",
  "ecma_visit",
  "ecma_quote",
  "ecma_plugin_transform",
  "ecma_transforms_compat",
  "ecma_preset_env",
  "ecma_codegen",
] }
serde_json = "1"
serde = "1"
jsonc-parser = { version = "0.23.0", features = ["serde"] }
anyhow = { version = "1.0.86" }
base64 = { version = "0.22.1" }
dashmap = { version = "5.5.3" }
swc_config = { version = "0.1.14" }
url = { version = "2.5.2" }
either = "1"
proc-macro2 = { version = "1.0.79" }
lazy_static = { version = "1.5.0" }
once_cell = { version = "1.19.0" }
oxc_resolver = { version = "1.9.3" }
miette = { version = "7.2.0" }
glob = { version = "0.3.1" }
indexmap = { version = "2.2.6" }
sugar_path = { version = "1.2.0" }
ignore = { version = "0.4.2" }
tsconfig = { version = "0.3.1" }
env_logger = { version = "0.11.5" }
log = { version = "0.4.22" }
